--- a/frontendChat/package.json
+++ b/frontendChat/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "alea": "^1.0.1",
     "axios": "^1.5.1",
     "electron": "^37.2.0",
+    "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
     "openai": "^5.8.4",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
     "remark-gfm": "^4.0.1",
+    "simplex-noise": "^3.0.1",
     "socket.io-client": "^4.7.5",
     "tw-elements": "^1.0.0"
   },
