--- a/frontendChat/package.json
+++ b/frontendChat/package.json
@@ -14,6 +14,7 @@
     "alea": "^1.0.1",
     "axios": "^1.5.1",
     "electron": "^37.2.0",
+    "fuse.js": "^7.1.0",
     "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
     "openai": "^5.8.4",
